Fix "How the process works" on small screens
I spotted that the Flexbox approach that had been in place was
resulting in the text wrapping on small screens. This commit
updates the approach to use a combination of Grid and Flexbox,
removing previous reliance on margins for spacing.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,22 +17,21 @@
   list-style-type: none;
 
   li {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: max-content auto;
+    grid-template-rows: max-content 1fr;
+
+    gap: 1rem;
+
+    span:has(i) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 0.5rem;
+    }
 
     .process-icon {
-      margin-right: 2rem;
-
       font-size: 2.5rem;
-    }
-
-    span:nth-child(2) {
-      flex-grow: 1;
-    }
-
-    span:nth-child(3) {
-      flex-basis: 100%;
-      padding-inline-start: 0.8rem;
     }
   }
 }
